Implementação pagina detalhes

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <div class="user">
                     <img src="./imgs/user.png"/>
                     <b>Gabriel Nagem Volpini</b>
+                    <span>Engenharia da computação</span>
                     <span>Matrícula: 652936</span>
                 </div>
 
